feat: complete Phase 1 - Revenue Foundation
- Add 6 women's fit products (cropped tees, fitted tanks, baby tees)
- Create About page with Berlin origin story
- Create Policies page (shipping, returns, privacy, terms)
- Create Size Guide page with measurement tables
- Add TrustBadge component (secure checkout, returns, shipping)
- Add EmailCapture widget for email signups
- Update navigation with new pages
- Update README to mark Phase 1 complete

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Coke on Cock - Social Heat Streetwear</title>
-  <meta name="title" content="Coke on Cock - Social Heat Streetwear" />
+  <title>CokeOnCock</title>
+  <meta name="title" content="CokeOnCock" />
   <meta name="description"
     content="Nightlife-first streetwear for the ones who came to participate. Wearable invitations that signal intent and find your people faster. No spectators, only participants." />
   <meta name="keywords"
